manifestfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-go-svc
  labels:
      app: web-app-go 
spec:
  type: ClusterIP
  selector:
    app: web-app-go
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
